[Finishes #177771038, Fixes #178085763, Fixes #178171807,  Finishes #177771031] Additional Updates and Creations
Fixed the login button from truncating in smaller windows.

Fixed the width issue for dasherz images when in smaller windows.

Created and styled a form with the payment info inside of the cart.

Polished up the collab and about pages in addition  to making collab better in smaller windows.

--- a/css/dasherz.css
+++ b/css/dasherz.css
@@ -46,11 +46,12 @@ img {
 @media screen and (max-width: 37.5em) {
   #content {
     display: inline-block;
+    float: none;
   }
 
   #content img {
-    height: 150px;
-    width: auto;
+    height: auto;
+    width: 150px;
   }
 
   article p {
